test/schemas/fail/circular_import_child.sat
// NOTEST
import "circular_import.sat";
